--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.76.1",
     "framer-motion": "^12.23.24",
+    "jspdf": "^3.0.3",
     "lucide-react": "^0.548.0",
     "next": "16.0.0",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "react-hook-form": "^7.65.0",
+    "recharts": "^3.3.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
